--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
 
 /* Your CSS Code here. */
+.box{
+	width:300px;
+	background-color:lightblue;
+	border:15px solid;
+	padding:50px;
+	margin:20px;
+	color:black;
+	text-align:center;
+	box-sizing:border-box;
+}
